--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
   ></script>
   <script>
     const root = document.getElementById("root");
-    const span = React.createElement(
-      "span",
-      { id: "cute", style: { color: "red" } },
+    const h3 = React.createElement(
+      "h3",
+      {
+        onMouseEnter: () => console.log("I'm a h3"),
+      },
       "hello, i'm a span"
     );
-    ReactDOM.render(span, root);
+    const button = React.createElement(
+      "button",
+      {
+        onClick: () => console.log("clicked!"),
+      },
+      "Click me!"
+    );
+    const container = React.createElement("div", null, [h3, button]);
+    ReactDOM.render(container, root);
   </script>
 </html>
