--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     crossorigin
     src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
   ></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const h3 = React.createElement(
-      "h3",
-      {
-        onMouseEnter: () => console.log("I'm a h3"),
-      },
-      "hello, i'm a span"
+    const Title = (
+      <h3 id="title" onMouseEnter={() => console.log("I'm a h3")}>
+        Hello I'm a Title!
+      </h3>
     );
-    const button = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("clicked!"),
-      },
-      "Click me!"
+    const Button = (
+      <button
+        style={{ backgroundColor: "tomato" }}
+        onClick={() => console.log("clicked!")}
+      >
+        Click me!
+      </button>
     );
-    const container = React.createElement("div", null, [h3, button]);
+    const container = React.createElement("div", null, [Title, Button]);
     ReactDOM.render(container, root);
   </script>
 </html>
