--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     function App() {
       const [counter, setCounter] = React.useState(0);
       const onClick = () => {
-        setCounter(counter + 1);
+        // setCounter(counter + 1);
+        setCounter((current) => current + 1); // 이렇게 함수를 사용하는 것이 더욱 안전함
       };
       return (
         <div>
