--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 
     const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
+    console.log("test");
   </script>
 </html>
