--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   </body>
   <script
     crossorigin
-    src="https://unpkg.com/react@17/umd/react.production.min.js"
+    src="https://unpkg.com/react@17.0.2/umd/react.development.js"
   ></script>
   <script
     crossorigin
     src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
   ></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.7.2/prop-types.js"></script>
   <script type="text/babel">
-    function Btn({ text, changeValue }) {
+    function Btn({ text, changeValue, fontSize = 16 }) {
       return (
         <button
           onClick={changeValue}
@@ -24,6 +25,7 @@
             margin: "10px",
             border: 0,
             borderRadius: 10,
+            fontSize: fontSize,
           }}
         >
           {text}
@@ -31,7 +33,10 @@
       );
     }
 
-    const MemorizedBtn = React.memo(Btn);
+    Btn.propTypes = {
+      text: PropTypes.string.isRequired,
+      fontSize: PropTypes.number,
+    };
 
     function App() {
       const [value, setValue] = React.useState("Save Changes");
@@ -40,8 +45,8 @@
       };
       return (
         <div>
-          <MemorizedBtn text={value} changeValue={changeValue} />
-          <MemorizedBtn text="Continue" />
+          <Btn text={value} changeValue={changeValue} fontSize={18} />
+          <Btn text="Continue" />
         </div>
       );
     }
